# waldwicht

./: .agentsignore  .gitignore  .gitmodules  LICENSE  Makefile  README.md  TECHNICAL_REPORT.md  bench.py  calibration.json  compose.yaml  gen_payload.py  proxy.py  pyproject.toml  start-omlx-local.sh  test.py  test_calibration.py  test_common.py  test_embed.py  test_embed_omlx.py  test_tools.py
ablation_results/: ablation_e2b_baselines.json  ablation_e2b_ne_depth.json  ablation_e2b_q3_knobs.json  answer_quality_attention-2bit-g64.json  answer_quality_attention-3bit-g64.json  answer_quality_calibration.json  answer_quality_combined-step2-floors.json  answer_quality_combo-attn3-mlp3-ple2-gate3-embed2.json  answer_quality_combo-attn3-mlp3-ple2-gate3.json  answer_quality_combo-attn3-mlp3-ple2.json  answer_quality_combo-attn3-mlp3.json  answer_quality_combo-attn3-ple2-gate3-embed2.json  answer_quality_combo-mlp3-only.json  answer_quality_combo-mlp3-ple2-gate3-embed2.json  answer_quality_combo-ple2-gate3-embed2.json  answer_quality_expanded-aq-5bit-mixed-A-ple3-gate4-embed3.json  answer_quality_expanded-aq-5bit-mixed-B-mlp4-ple3-gate4-embed3.json  answer_quality_expanded-aq-optimal-2.32gb.json  answer_quality_expanded-aq-ple2-gate3-embed2-2.53gb.json  answer_quality_expanded-aq-uniform-4bit-g64.json  answer_quality_expanded-aq-uniform-5bit-g64.json  answer_quality_expanded.json  answer_quality_gs-mlp3g128-ple2g128-gate3g128-embed2g128.json  answer_quality_gs-mlp3g32-ple2-gate3-embed2.json  answer_quality_gs-mlp3g32-ple2g32-gate3g32-embed2g32.json  component_floors_e2b.json  (+17 more)
(+70 files in other folders)
