[project]
name = "waldwicht-workspace"
version = "0.0.0"
requires-python = "==3.12.8"
dependencies = [
    "huggingface-hub>=0.23.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "Pillow>=9.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "starlette>=0.37.2",
    "uvicorn>=0.23.0",
]

[tool.uv]
package = false
